various small css tweaks, empty entries now use unicode blank space so that divs do not collapse, css grid added so that entries are spaced correctly

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,19 +1,19 @@
 @charset "utf-8";
 
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-}
+// body {
+//   margin: 0;
+//   padding: 0;
+//   font-family: sans-serif;
+// }
 
 .wrapper {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+  grid-gap: 10px;
 }
 
 .item {
-  margin: .25rem;
-  padding: .25rem;
+  user-select: none;
 }
+
 
